Fix build - illegal access is common :-/