@@ -2,7 +2,7 @@
 ARG username=worker
 ARG work_dir=/home/$username/work
 
-FROM openjdk:14.0.1-jdk-slim as worker
+FROM openjdk:14.0.2-jdk-slim as worker
 ARG username
 ARG work_dir
 
@@ -26,7 +26,7 @@ WORKDIR $work_dir
 
 FROM worker as builder
 ARG username
-ENV GRADLE_OPTS='-Dorg.gradle.daemon=false -Xms256m -Xmx2g --illegal-access=deny'
+ENV GRADLE_OPTS='-Dorg.gradle.daemon=false -Xms256m -Xmx2g'
 
 COPY --chown=$username . .
 
